# reaveros

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
cmake/: target_functions.cmake
doc/: licence-cpp-formatted
images/: CMakeLists.txt  uefi.cmake
libraries/: CMakeLists.txt
libraries/libcrypto/: CMakeLists.txt
libraries/libcrypto/include/: CMakeLists.txt
libraries/libcrypto/include/crypto/: crc32.h
libraries/libcrypto/src/: CMakeLists.txt  crc32.cpp
libraries/libfreestanding/: CMakeLists.txt
libraries/libfreestanding/include/: CMakeLists.txt  __char_traits  climits  concepts  cstddef  cstdint  cstring  cwchar  iterator  memory  string_view  type_traits  utility
libraries/libfreestanding/src/: CMakeLists.txt  cstring.cpp
libraries/libreaveros-loader/: CMakeLists.txt
libraries/libreaveros-loader/include/: CMakeLists.txt
libraries/libreaveros-loader/include/reaveros/loader/: memory_map.h
libraries/libreaveros-loader/src/: CMakeLists.txt
loader/uefi/: Makefile  config.h  crt0.asm  main.cpp  run.sh
loader/uefi/config/: config.cpp  config.h  reaveros.conf
loader/uefi/cpu/: cpuid.cpp  cpuid.h
loader/uefi/efi/: console.cpp  console.h  efi.cpp  efi.h  filesystem.cpp  filesystem.h  path.cpp  path.h  system_table.h  types.h
loader/uefi/memory/: memory.cpp
loader/uefi/video/: mode.cpp  mode.h
loaders/: CMakeLists.txt
loaders/uefi/: .gitignore  CMakeLists.txt  crt0.asm  loader.lds  main.cpp
loaders/uefi/config/: config.cpp  config.h  reaveros.conf
loaders/uefi/cpu/: cpuid.cpp  cpuid.h  detection.h  environment.h  halt.h
loaders/uefi/cpu/amd64/: cpuid.cpp  cpuid.h  environment.cpp  environment.h  halt.cpp  halt.h
loaders/uefi/efi/: console.cpp  console.h  efi.cpp  efi.h  filesystem.cpp  filesystem.h  memory_map.cpp  memory_map.h  path.cpp  path.h  system_table.h  types.h  video_mode.cpp  video_mode.h
loaders/uefi/memory/: map.cpp  map.h
loaders/uefi/video/: mode.cpp  mode.h
toolchains/: CMakeLists.txt  cmake.cmake  fs-fat.cmake  llvm.cmake
toolchains/files/: llvm-amd64-kernel.cmake.in  llvm-amd64-user.cmake.in
tools/: build
